# zeroapp

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  alembic.ini  flutter_agent_requirements.md  pyproject.toml
.claude/: settings.json
.next/: trace  trace-build
alembic/: env.py
autodev/: __init__.py  celery_app.py  config.py  database.py  llm.py  main.py
autodev/api/: __init__.py  app.py  deps.py  device_manager.py  events.py  routes.py  websocket.py
autodev/assets/: __init__.py  icon_generator.py  screenshot.py  store_listing.py
autodev/builder/: __init__.py  flutter_builder.py  publisher.py  signer.py
autodev/crawler/: __init__.py  appstore.py  base.py  processor.py  producthunt.py  reddit.py
autodev/evaluator/: competition.py  feasibility.py  rules.py  scorer.py
autodev/generator/: __init__.py  code_generator.py  dependency_checker.py  fixer.py  prd_generator.py  template_selector.py
autodev/models/: __init__.py  app_metric.py  app_registry.py  build_log.py  demand.py  pipeline_run.py
autodev/monitor/: __init__.py  dashboard.py  metrics.py
autodev/pipeline/: __init__.py  checkpointer.py  graph.py  orchestrator.py  retry.py  reviser.py  runner.py
dashboard/: next.config.ts  package-lock.json  package.json  tsconfig.tsbuildinfo
tests/: __init__.py  conftest.py  test_blueprint.py  test_config.py  test_llm.py  test_models.py  test_platforms.py  test_processor.py  test_publisher.py  test_rules.py  test_scorer.py  test_validator.py
zerodev/: __init__.py  celery_app.py  config.py  database.py  llm.py  main.py
zerodev/api/: app.py  (+5 more)
(+95 files in other folders)
