[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "autodev"
version = "0.1.0"
description = "AutoDev Agent: Autonomous app development pipeline - crawl requirements, generate Flutter apps, build and publish."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

dependencies = [
    "celery[redis]>=5.3",
    "redis>=5.0",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "anthropic>=0.40",
    "praw>=7.7",
    "google-play-scraper>=1.2",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "psycopg2-binary>=2.9",
    "alembic>=1.13",
    "pydantic>=2.6",
    "pydantic-settings>=2.1",
    "python-dotenv>=1.0",
    "rich>=13.7",
    "typer>=0.9",
    "Pillow>=10.2",
    "numpy>=1.26",
    "sentence-transformers>=2.3",
    "langgraph>=0.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "ruff>=0.3",
    "mypy>=1.8",
]

[project.scripts]
autodev = "autodev.main:app"

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.11"
strict = true
